# de-challenge

./: .env.example  .gitignore  Dockerfile  Dockerfile.spark  LICENSE  README.md  TUTORIAL.md  alembic.ini  bad.csv  docker-compose.spark.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_core_tables.py  0002_add_execution_mode_to_jobs.py
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py
app/db/: models.py  session.py
app/services/: analytics.py  ingestion.py  notifications.py
app/tests/: __init__.py  conftest.py  test_api.py
docs/: architecture.md  implementation-notes.md  scalability.md
scripts/: generate_synthetic_data.py  spark_batch_ingest.py  start.sh
sql/: bonus_queries.sql
